# oneclick-trip

./: .env.example  .gitignore  README.md  docker-compose.yml
ai/travel_agent/: .env.example  .gitignore  README.md  pyproject.toml
ai/travel_agent/app/: __init__.py  config.py  main.py
ai/travel_agent/app/agents/: __init__.py  candidate_selector.py  clarification_agent.py  direct_modify_agent.py  direct_planner_agent.py  intent_agent.py  memory_agent.py  modify_agent.py  plan_presenter.py  planner_agent.py  query_presenter.py  research_agent.py  reviewer_agent.py  revision_agent.py
ai/travel_agent/app/api/: routes.py  schemas.py
ai/travel_agent/app/booking/: __init__.py  contracts.py  java_backend.py  mock_backend.py
ai/travel_agent/app/database/: __init__.py  contracts.py  java_backend.py  mysql.py
ai/travel_agent/app/domain/: __init__.py  models.py
ai/travel_agent/app/graph/: __init__.py  builder.py  router.py  state.py  supervisor.py  tool_runtime.py
ai/travel_agent/scripts/: bootstrap_infrastructure.py  verify_runtime_flow.py
ai/travel_agent/tests/: test_api.py  test_bge_embedding.py  test_booking_subgraph.py  test_chroma_store.py  test_graph_skeleton.py  test_intent_and_routing.py  test_java_business_backend.py  test_knowledge_pipeline.py  test_knowledge_search_tool.py  test_llm_factory.py  test_memory_candidate.py  test_modify_subgraph.py  test_multi_turn_conversation.py  test_persistence_flow.py  test_planning_subgraph.py  test_research_quality.py  test_state.py  test_tools_and_query.py  test_validation_loop.py
backend/: pom.xml
docs/: api.http  (+6 more)
(+181 files in other folders)
