[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "oneclick-travel-agent"
version = "0.8.0"
description = "LangGraph-based travel concierge agent"
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "fastapi>=0.139,<0.140",
    "aiomysql>=0.3,<0.4",
    "chromadb>=1.0,<2",
    "langchain>=1.3,<1.4",
    "langchain-openai>=1.1,<2",
    "langgraph>=1.2,<1.3",
    "langgraph-checkpoint-redis>=0.5,<0.6",
    "pydantic>=2.13,<3",
    "python-dotenv>=1.2,<2",
    "redis>=6,<7",
    "sqlalchemy>=2.0,<2.1",
    "uvicorn[standard]>=0.35,<1",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1",
    "pytest>=9.1,<10",
]
infrastructure = []

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q -p no:cacheprovider"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
